--- a/content/posts/1.md
+++ b/content/posts/1.md
@@ -4,6 +4,8 @@ date: 2025-04-23T13:47:58.584Z
 description: treesheep's projects
 ---
 
+Access active projects and services through the header menu.
+
 ---
 # projects
 ---
